Add Version category in SettingActivity.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,10 +8,17 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "club.rodong.playerforstream"
-        minSdkVersion 23
+        minSdkVersion 21
         targetSdkVersion 28
         versionCode 8
+        /*
+        android:versionName = “1.0.0”
+        l  첫 번째 번호 : 컨셉이나 앱이 지향하는 기본 디자인이 변경된 경우
+        l  두 번째 번호 : 기능 추가나 사양이 변경된 경우
+        l  세 번째 번호 : 버그 수정, 디자인 변경
+        */
         versionName "0.1.181106"
+        multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
