--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,14 @@ repositories {
 }
 android {
     compileSdkVersion 28
+
+
+
+    // Load values from keystore.properties file
+    def keystorePropertiesFile = rootProject.file("keystore.properties")
+    def keystoreProperties = new Properties()
+    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+
     defaultConfig {
         applicationId "club.rodong.playerforstream"
         minSdkVersion 21
@@ -20,6 +28,10 @@ android {
         versionName "0.1.181107"
         multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        // Create BuildConfig variables
+        buildConfigField "String", "TWITCH_CLIENT_ID", keystoreProperties["TWITCH_CLIENT_ID"]
+        buildConfigField "String", "TWITCH_WEBHOOK_SECRET", keystoreProperties["TWITCH_WEBHOOK_SECRET"]
     }
     buildTypes {
         release {
