--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,11 +15,11 @@ android {
     keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 
     defaultConfig {
-        applicationId "club.rodong.playerforstream"
+        applicationId "club.rodong.slitch"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 12
-        versionName "0.1.181110"
+        versionCode 1
+        versionName "0.1.181111"
         multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
